fixed letter spacing and font size for content

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -149,7 +149,8 @@ body,
   padding: 8px;
   height: calc(100vh - 96px);
   font-family: SFMonoRegular !important;
-  font-size: 12px;
+  font-size: 14px;
+  letter-spacing: 1;
   border-radius: 10px;
   width: calc(100vw - 286px);
   white-space: pre-wrap;
